--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,16 @@
   width: 1440px;
   padding: 0 80px;
   box-sizing: border-box;
-  font-family: "Inter";
+  font-family: "IBM Plex Sans KR";
 }
 
 /* latin */
 @font-face {
-  font-family: "Inter";
+  font-family: "IBM Plex Sans KR";
   font-style: normal;
-  font-weight: 500;
-  src: url(https://fonts.gstatic.com/s/inter/v11/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuI6fAZ9hiA.woff2)
-    format("woff2");
+  font-weight: 400;
+  font-display: swap;
+  src: url(./fonts/IBMPlexSansKR-Regular.ttf);
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
